Added button and fixed header comments

--- a/scss/outline.scss
+++ b/scss/outline.scss
@@ -1,54 +1,42 @@
-// .outline
+// .outline styles
 .outline {
   border-radius: 3px;
   padding: 5px 10px;
   margin-top: 10px;
 }
-
 .outline-primary {
   border: $primary 1px solid;
 }
-
 .outline-info {
   border: $info 1px solid;
 }
-
 .outline-success {
   border: $success 1px solid;
 }
-
 .outline-warning {
   border: $warning 1px solid;
 }
-
 .outline-danger {
   border: $danger 1px solid;
 }
-
 .outline-gray {
   border: $gray 1px solid;
 }
-
 .outline-blue {
   border: $blue 1px solid;
 }
-
 .outline-top-blue {
   border-top: $blue 1px solid;
 }
-
 .outline-bottom-blue {
   border-bottom: $blue 1px solid;
 }
-
 .outline-bottom-white {
   border-bottom: $white 1px solid;
 }
-
 .outline-light-blue {
   border: $light-blue 1px solid;
 }
-
 .outline-light-blue {
   border: $light-blue 1px solid;
 }
