Added more margins

--- a/scss/m.scss
+++ b/scss/m.scss
@@ -1,12 +1,35 @@
 // .m styles
+.m-t-5 {
+  margin-top: 5px;
+}
+.m-t-10 {
+  margin-top: 10px;
+}
+.m-t-15 {
+  margin-top: 15px;
+}
+.m-t-20 {
+  margin-top: 20px;
+}
+.m-t-25 {
+  margin-top: 25px;
+}
+.m-t-30 {
+  margin-top: 30px;
+}
+.m-t-50 {
+  margin-top: 50px;
+}
+.m-t-100 {
+  margin-top: 100px;
+}
+
 .m-r-10 {
   margin-right: 10px;
 }
-
 .m-r-15 {
   margin-right: 10px;
 }
-
 .m-r-20 {
   margin-right: 20px;
 }
@@ -14,11 +37,9 @@
 .m-b-10 {
   margin-right: 10px;
 }
-
 .m-b-15 {
   margin-right: 10px;
 }
-
 .m-b-20 {
   margin-right: 10px;
 }
