--- a/scss/m.scss
+++ b/scss/m.scss
@@ -24,22 +24,41 @@
   margin-top: 100px;
 }
 
+.m-r-5 {
+  margin-right: 5px;
+}
 .m-r-10 {
   margin-right: 10px;
 }
 .m-r-15 {
-  margin-right: 10px;
+  margin-right: 15px;
 }
 .m-r-20 {
   margin-right: 20px;
 }
 
+.m-b-5 {
+  margin-bottom: 5px;
+}
 .m-b-10 {
-  margin-right: 10px;
+  margin-bottom: 10px;
 }
 .m-b-15 {
-  margin-right: 10px;
+  margin-bottom: 15px;
 }
 .m-b-20 {
-  margin-right: 10px;
+  margin-bottom: 20px;
+}
+
+.m-l-5 {
+  margin-left: 5px;
+}
+.m-l-10 {
+  margin-left: 10px;
+}
+.m-l-15 {
+  margin-left: 15px;
+}
+.m-l-20 {
+  margin-left: 20px;
 }
