--- a/scss/outline.scss
+++ b/scss/outline.scss
@@ -55,3 +55,24 @@
 .outline-bottom-white {
   border-bottom: 1px solid $white;
 }
+
+.outline-rounded-primary {
+  border: 1px solid $primary;
+  border-radius: 3px;
+}
+.outline-rounded-info {
+  border: 1px solid $info;
+  border-radius: 3px;
+}
+.outline-rounded-success {
+  border: 1px solid $success;
+  border-radius: 3px;
+}
+.outline-rounded-warning {
+  border: 1px solid $warning;
+  border-radius: 3px;
+}
+.outline-rounded-danger {
+  border: 1px solid $danger;
+  border-radius: 3px;
+}
