--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -6,11 +6,13 @@ $dark-gray: #808080;
 $black: #000;
 
 // Remnants colors from the  previous template
-$gray: #eee;
-$light-gray: #f6f6f6;
-$blue: #b0e1f3;
-$light-blue: #cdecf7;
-$super-light-blue: #e3f4fb;
+$wild-sand-light: #eee;
+$wild-sand: #f6f6f6;
+$blizzard-blue: #b0e1f3;
+$humming-bird: #cdecf7;
+$humming-bird-light: #e3f4fb;
+
+$gray: $wild-sand;
 
 // Theme 1
 $boston-blue: #3B92C7;
