--- a/scss/outline.scss
+++ b/scss/outline.scss
@@ -22,14 +22,16 @@
 .outline-gray {
   border: $gray 1px solid;
 }
-.outline-blue {
-  border: $blue 1px solid;
+
+// Old GRP themes
+.outline-blizzard-blue {
+  border: $blizzard-blue 1px solid;
 }
-.outline-light-blue {
-  border: $light-blue 1px solid;
+.outline-humming-bird {
+  border: $humming-bird 1px solid;
 }
-.outline-light-blue {
-  border: $light-blue 1px solid;
+.outline-humming-bird-light {
+  border: $humming-bird-light 1px solid;
 }
 
 .outline-top-primary {
@@ -45,11 +47,11 @@
   border-bottom: 1px solid $primary;
 }
 
-.outline-top-blue {
-  border-top: 1px solid $blue;
+.outline-top-blizzard-blue {
+  border-top: 1px solid $blizzard-blue;
 }
-.outline-bottom-blue {
-  border-bottom: 1px solid $blue;
+.outline-bottom-blizzard-blue {
+  border-bottom: 1px solid $blizzard-blue;
 }
 
 .outline-bottom-white {
