--- a/css/hw.css
+++ b/css/hw.css
@@ -51,21 +51,21 @@ code, kbd, pre, samp {
 }
 
 .alert-primary {
-  color: #3B92C7;
-  background-color: #eef5fa;
-  border-color: #3B92C7;
+  color: #3b83b5;
+  background-color: #e0edf5;
+  border-color: #3b83b5;
 }
 
 .alert-secondary {
-  color: #706F6F;
-  background-color: #e2e2e2;
-  border-color: #706F6F;
+  color: #999999;
+  background-color: white;
+  border-color: #999999;
 }
 
 .alert-warning {
-  color: #ff7d01;
-  background-color: #fff2e7;
-  border-color: #ff7d01;
+  color: #FF7D00;
+  background-color: #fff2e6;
+  border-color: #FF7D00;
 }
 
 .alert-danger {
@@ -95,17 +95,17 @@ code, kbd, pre, samp {
 
 .badge-primary {
   color: #fff;
-  background-color: #3B92C7;
+  background-color: #3b83b5;
 }
 
 .badge-secondary {
   color: #fff;
-  background-color: #706F6F;
+  background-color: #999999;
 }
 
 .badge-warning {
   color: #fff;
-  background-color: #ff7d01;
+  background-color: #FF7D00;
 }
 
 .badge-danger {
@@ -124,12 +124,12 @@ code, kbd, pre, samp {
 }
 
 .bg-primary {
-  background: #3B92C7;
+  background: #3b83b5;
   color: white;
 }
 
 .bg-secondary {
-  background: #706F6F;
+  background: #999999;
   color: white;
 }
 
@@ -139,7 +139,7 @@ code, kbd, pre, samp {
 }
 
 .bg-warning {
-  background: #ff7d01;
+  background: #FF7D00;
   color: white;
 }
 
@@ -190,30 +190,30 @@ code, kbd, pre, samp {
 }
 
 .btn-primary {
-  background: #3B92C7;
+  background: #3b83b5;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background-color: #2e75a1;
-  border-color: #2e75a1;
+  background-color: #2e678f;
+  border-color: #2e678f;
 }
 
 .btn-secondary {
-  background: #706F6F;
+  background: #999999;
 }
 
 .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
-  background-color: #565656;
-  border-color: #565656;
+  background-color: gray;
+  border-color: gray;
 }
 
 .btn-info {
-  background: #243a59;
+  background: #74b1dd;
 }
 
 .btn-info:hover, .btn-info:focus, .btn-info:active {
-  background-color: #152235;
-  border-color: #152235;
+  background-color: #4b9ad3;
+  border-color: #4b9ad3;
 }
 
 .btn-success {
@@ -237,14 +237,14 @@ code, kbd, pre, samp {
 }
 
 .btn-warning {
-  background: #ff7d01;
+  background: #FF7D00;
   color: #fff;
 }
 
 .btn-outline-warning {
-  border: 1px solid #ff7d01;
-  background: #fff2e7;
-  color: #ff7d01;
+  border: 1px solid #FF7D00;
+  background: #fff2e6;
+  color: #FF7D00;
 }
 
 .btn-warning:hover, .btn-warning:focus, .btn-warning:active {
@@ -259,17 +259,17 @@ code, kbd, pre, samp {
 }
 
 .card-bg-primary {
-  background: #3B92C7;
+  background: #3b83b5;
   color: white;
 }
 
 .card-bg-secondary {
-  background: #706F6F;
+  background: #999999;
   color: white;
 }
 
 .card-bg-warning {
-  background: #ff7d01;
+  background: #FF7D00;
   color: white;
 }
 
@@ -307,7 +307,7 @@ code, kbd, pre, samp {
 }
 
 .card-fold-bg-primary.fold-bottom-right:before {
-  border-color: #3B92C7 white;
+  border-color: #3b83b5 white;
 }
 
 .card-fold-bg-danger.fold-bottom-right:before {
@@ -315,7 +315,7 @@ code, kbd, pre, samp {
 }
 
 .card-fold-bg-warning.fold-bottom-right:before {
-  border-color: #ff7d01 white;
+  border-color: #FF7D00 white;
 }
 
 .card-fold-bg-success.fold-bottom-right:before {
@@ -341,7 +341,7 @@ code, kbd, pre, samp {
 }
 
 .fold-bg-primary.fold-bottom-right:before {
-  border-color: #3B92C7 white;
+  border-color: #3b83b5 white;
 }
 
 .fold-bg-danger.fold-bottom-right:before {
@@ -349,7 +349,7 @@ code, kbd, pre, samp {
 }
 
 .fold-bg-warning.fold-bottom-right:before {
-  border-color: #ff7d01 white;
+  border-color: #FF7D00 white;
 }
 
 .fold-bg-success.fold-bottom-right:before {
@@ -377,11 +377,11 @@ code, kbd, pre, samp {
 }
 
 .outline-primary {
-  border: #3B92C7 1px solid;
+  border: #3b83b5 1px solid;
 }
 
 .outline-info {
-  border: #243a59 1px solid;
+  border: #74b1dd 1px solid;
 }
 
 .outline-success {
@@ -389,7 +389,7 @@ code, kbd, pre, samp {
 }
 
 .outline-warning {
-  border: #ff7d01 1px solid;
+  border: #FF7D00 1px solid;
 }
 
 .outline-danger {
@@ -413,19 +413,19 @@ code, kbd, pre, samp {
 }
 
 .outline-top-primary {
-  border-top: 1px solid #3B92C7;
+  border-top: 1px solid #3b83b5;
 }
 
 .outline-left-primary {
-  border-left: 1px solid #3B92C7;
+  border-left: 1px solid #3b83b5;
 }
 
 .outline-right-primary {
-  border-right: 1px solid #3B92C7;
+  border-right: 1px solid #3b83b5;
 }
 
 .outline-bottom-primary {
-  border-bottom: 1px solid #3B92C7;
+  border-bottom: 1px solid #3b83b5;
 }
 
 .outline-top-blizzard-blue {
@@ -446,12 +446,12 @@ code, kbd, pre, samp {
 }
 
 .outline-rounded-primary {
-  border: 1px solid #3B92C7;
+  border: 1px solid #3b83b5;
   border-radius: 3px;
 }
 
 .outline-rounded-info {
-  border: 1px solid #243a59;
+  border: 1px solid #74b1dd;
   border-radius: 3px;
 }
 
@@ -461,7 +461,7 @@ code, kbd, pre, samp {
 }
 
 .outline-rounded-warning {
-  border: 1px solid #ff7d01;
+  border: 1px solid #FF7D00;
   border-radius: 3px;
 }
 
@@ -471,15 +471,15 @@ code, kbd, pre, samp {
 }
 
 .text-primary {
-  color: #3B92C7;
+  color: #3b83b5;
 }
 
 .text-info {
-  color: #243a59;
+  color: #74b1dd;
 }
 
 .text-warning {
-  color: #ff7d01;
+  color: #FF7D00;
 }
 
 .text-danger {
