--- a/css/hw.css
+++ b/css/hw.css
@@ -31,6 +31,10 @@ hr {
   border-bottom: 1px solid #ffffff;
 }
 
+p {
+  line-height: 1.3em;
+}
+
 code, kbd, pre, samp {
   font-size: 13px;
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -51,9 +55,9 @@ code, kbd, pre, samp {
 }
 
 .alert-primary {
-  color: #3b83b5;
-  background-color: #e0edf5;
-  border-color: #3b83b5;
+  color: #1887B9;
+  background-color: #c0e6f7;
+  border-color: #1887B9;
 }
 
 .alert-secondary {
@@ -95,7 +99,7 @@ code, kbd, pre, samp {
 
 .badge-primary {
   color: #fff;
-  background-color: #3b83b5;
+  background-color: #1887B9;
 }
 
 .badge-secondary {
@@ -124,7 +128,7 @@ code, kbd, pre, samp {
 }
 
 .bg-primary {
-  background: #3b83b5;
+  background: #1887B9;
   color: white;
 }
 
@@ -190,12 +194,12 @@ code, kbd, pre, samp {
 }
 
 .btn-primary {
-  background: #3b83b5;
+  background: #1887B9;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background-color: #2e678f;
-  border-color: #2e678f;
+  background-color: #12668c;
+  border-color: #12668c;
 }
 
 .btn-secondary {
@@ -259,7 +263,7 @@ code, kbd, pre, samp {
 }
 
 .card-bg-primary {
-  background: #3b83b5;
+  background: #1887B9;
   color: white;
 }
 
@@ -307,7 +311,7 @@ code, kbd, pre, samp {
 }
 
 .card-fold-bg-primary.fold-bottom-right:before {
-  border-color: #3b83b5 white;
+  border-color: #1887B9 white;
 }
 
 .card-fold-bg-danger.fold-bottom-right:before {
@@ -341,7 +345,7 @@ code, kbd, pre, samp {
 }
 
 .fold-bg-primary.fold-bottom-right:before {
-  border-color: #3b83b5 white;
+  border-color: #1887B9 white;
 }
 
 .fold-bg-danger.fold-bottom-right:before {
@@ -377,7 +381,7 @@ code, kbd, pre, samp {
 }
 
 .outline-primary {
-  border: #3b83b5 1px solid;
+  border: #1887B9 1px solid;
 }
 
 .outline-info {
@@ -417,19 +421,19 @@ code, kbd, pre, samp {
 }
 
 .outline-top-primary {
-  border-top: 1px solid #3b83b5;
+  border-top: 1px solid #1887B9;
 }
 
 .outline-left-primary {
-  border-left: 1px solid #3b83b5;
+  border-left: 1px solid #1887B9;
 }
 
 .outline-bottom-primary {
-  border-bottom: 1px solid #3b83b5;
+  border-bottom: 1px solid #1887B9;
 }
 
 .outline-right-primary {
-  border-right: 1px solid #3b83b5;
+  border-right: 1px solid #1887B9;
 }
 
 .outline-top-blizzard-blue {
@@ -445,7 +449,7 @@ code, kbd, pre, samp {
 }
 
 .outline-rounded-primary {
-  border: 1px solid #3b83b5;
+  border: 1px solid #1887B9;
   border-radius: 3px;
 }
 
@@ -485,7 +489,7 @@ code, kbd, pre, samp {
 }
 
 .text-primary {
-  color: #3b83b5;
+  color: #1887B9;
 }
 
 .text-info {
@@ -514,6 +518,10 @@ code, kbd, pre, samp {
 
 .text-lg {
   font-size: 15px;
+}
+
+.m-t-1 {
+  margin-top: 1px;
 }
 
 .m-t-5 {
@@ -548,6 +556,10 @@ code, kbd, pre, samp {
   margin-top: 100px;
 }
 
+.m-r-1 {
+  margin-right: 1px;
+}
+
 .m-r-5 {
   margin-right: 5px;
 }
@@ -564,6 +576,14 @@ code, kbd, pre, samp {
   margin-right: 20px;
 }
 
+.m-r-50 {
+  margin-right: 50px;
+}
+
+.m-b-1 {
+  margin-bottom: 1px;
+}
+
 .m-b-5 {
   margin-bottom: 5px;
 }
@@ -578,6 +598,10 @@ code, kbd, pre, samp {
 
 .m-b-20 {
   margin-bottom: 20px;
+}
+
+.m-b-50 {
+  margin-bottom: 50px;
 }
 
 .m-l-1 {
@@ -602,6 +626,15 @@ code, kbd, pre, samp {
 
 .m-l-50 {
   margin-left: 50px;
+}
+
+.hw-icon {
+  padding-left: 35px;
+}
+
+.hw-icon-comments {
+  background: url("img/comments.png") no-repeat;
+  background-size: 32px;
 }
 
 .container {
