--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -36,13 +36,14 @@ $light-gray: $wild-sand;
 
 // Theme 2
 $boston-blue: #3b83b5;
+$eastern-blue: #1887B9;
 $dusty-gray: #999999;
 $viking: #74b1dd;
 $atlantis: #81BE23;
 $flush-orange: #FF7D00;
 $razzmatazz: #D80878;
 
-$primary: $boston-blue;
+$primary: $eastern-blue;
 $default: $mercury;
 $secondary: $dusty-gray;
 $success: $atlantis;
