--- a/scss/m.scss
+++ b/scss/m.scss
@@ -1,4 +1,9 @@
 // .m styles
+
+// top
+.m-t-1 {
+  margin-top: 1px;
+}
 .m-t-5 {
   margin-top: 5px;
 }
@@ -24,6 +29,10 @@
   margin-top: 100px;
 }
 
+// right
+.m-r-1 {
+  margin-right: 1px;
+}
 .m-r-5 {
   margin-right: 5px;
 }
@@ -36,7 +45,14 @@
 .m-r-20 {
   margin-right: 20px;
 }
+.m-r-50 {
+  margin-right: 50px;
+}
 
+// bottom
+.m-b-1 {
+  margin-bottom: 1px;
+}
 .m-b-5 {
   margin-bottom: 5px;
 }
@@ -49,7 +65,11 @@
 .m-b-20 {
   margin-bottom: 20px;
 }
+.m-b-50 {
+  margin-bottom: 50px;
+}
 
+// left
 .m-l-1 {
   margin-left: 1px;
 }
