Fixed icon image

--- a/css/hw.css
+++ b/css/hw.css
@@ -633,7 +633,7 @@ code, kbd, pre, samp {
 }
 
 .hw-icon-comments {
-  background: url("img/comments.png") no-repeat;
+  background: url("../img/comments.png") no-repeat;
   background-size: 32px;
 }
 
