--- a/scss/icon.scss
+++ b/scss/icon.scss
@@ -3,6 +3,6 @@
 }
 
 .hw-icon-comments {
-  background: url("img/comments.png") no-repeat;
+  background: url("../img/comments.png") no-repeat;
   background-size: 32px;
 }
