--- a/scss/col.scss
+++ b/scss/col.scss
@@ -32,51 +32,103 @@ $border: 1;
   width: $max-col-width / 2;
 }
 
-/*
-  ##Device = Desktops
-  ##Screen = 1281px to higher resolution desktops
-*/
+
+// Device = Desktops; Screen = 1281px to higher resolution desktops
+@media (min-width: 1281px) {
+    .col-lg-none {
+        display: none;
+    }
+}
+// Device = Laptops, Desktops; Screen = B/w 1025px to 1280px
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .col-lg-none {
+        display: none;
+    }
+}
+// Device = Tablets, Ipads (portrait); Screen = B/w 768px to 1024px
+@media (min-width: 768px) and (max-width: 1024px) {
+    body {
+        min-width: 0;
+        background: none;
+    }
+
+    .col-sm-none {
+        display: none;
+    }
+}
+// Device = Tablets, Ipads (landscape); Screen = B/w 768px to 1024px
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    body {
+        min-width: 0;
+        background: none;
+    }
+
+    .col-sm-none {
+        display: none;
+    }
+}
+// Device = Low Resolution Tablets, Mobiles (Landscape); Screen = B/w 481px to 767px
+@media (min-width: 481px) and (max-width: 767px) {
+    body {
+        min-width: 0;
+        background: none;
+    }
+
+    .col-sm-none {
+        display: none;
+    }
+}
+// Device = Most of the Smartphones Mobiles (Portrait); Screen = B/w 320px to 479px
+@media (min-width: 321px) and (max-width: 480px) {
+    body {
+        min-width: 0;
+        background: none;
+    }
+
+    .col-sm-none {
+        display: none;
+    }
+}
+// Device = Most of the Smartphones Mobiles (Portrait); Screen = B/w 320px to 479px
+@media (min-width: 200px) and (max-width: 320px) {
+    body {
+        min-width: 0;
+        background: none;
+    }
+
+    .col-sm-none {
+        display: none;
+    }
+}
+@media (max-width:1024px) {}
+
+
+// More col-*
+
+// Device = Desktops; Screen = 1281px to higher resolution desktops
 @media (min-width: 1281px) {
   .col-md-1 {
       width: $min-col-width;
   }
 }
-/*
-  ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
-*/
+// Device = Laptops, Desktops; Screen = B/w 1025px to 1280px
 @media (min-width: 1025px) and (max-width: 1280px) {
 }
-/*
-  ##Device = Tablets, Ipads (portrait)
-  ##Screen = B/w 768px to 1024px
-*/
+// Device = Tablets, Ipads (portrait); Screen = B/w 768px to 1024px
 @media (min-width: 768px) and (max-width: 1024px) {
     .col-md-1 {
         width: $max-col-width;
     }
 }
-/*
-  ##Device = Tablets, Ipads (landscape)
-  ##Screen = B/w 768px to 1024px
-*/
+// Device = Tablets, Ipads (landscape); Screen = B/w 768px to 1024px
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 }
-/*
-  ##Device = Low Resolution Tablets, Mobiles (Landscape)
-  ##Screen = B/w 481px to 767px
-*/
+// Device = Low Resolution Tablets, Mobiles (Landscape); Screen = B/w 481px to 767px
 @media (min-width: 481px) and (max-width: 767px) {
 }
-/*
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
+// Device = Most of the Smartphones Mobiles (Portrait); Screen = B/w 320px to 479px
 @media (min-width: 321px) and (max-width: 480px) {
 }
-/*
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
+// Device = Most of the Smartphones Mobiles (Portrait); Screen = B/w 320px to 479px
 @media (min-width: 200px) and (max-width: 320px) {
 }
