--- a/css/grp.css
+++ b/css/grp.css
@@ -463,6 +463,10 @@ hr {
   font-size: 15px;
 }
 
+.text-sm {
+  font-size: 11px;
+}
+
 .m-t-1 {
   margin-top: 1px;
 }
@@ -617,43 +621,75 @@ hr {
   width: 50%;
 }
 
-/*
-  ##Device = Desktops
-  ##Screen = 1281px to higher resolution desktops
-*/
+@media (min-width: 1281px) {
+  .col-lg-none {
+    display: none;
+  }
+}
+@media (min-width: 1025px) and (max-width: 1280px) {
+  .col-lg-none {
+    display: none;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  body {
+    min-width: 0;
+    background: none;
+  }
+
+  .col-sm-none {
+    display: none;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  body {
+    min-width: 0;
+    background: none;
+  }
+
+  .col-sm-none {
+    display: none;
+  }
+}
+@media (min-width: 481px) and (max-width: 767px) {
+  body {
+    min-width: 0;
+    background: none;
+  }
+
+  .col-sm-none {
+    display: none;
+  }
+}
+@media (min-width: 321px) and (max-width: 480px) {
+  body {
+    min-width: 0;
+    background: none;
+  }
+
+  .col-sm-none {
+    display: none;
+  }
+}
+@media (min-width: 200px) and (max-width: 320px) {
+  body {
+    min-width: 0;
+    background: none;
+  }
+
+  .col-sm-none {
+    display: none;
+  }
+}
 @media (min-width: 1281px) {
   .col-md-1 {
     width: 8.3333333333%;
   }
 }
-/*
-  ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
-*/
-/*
-  ##Device = Tablets, Ipads (portrait)
-  ##Screen = B/w 768px to 1024px
-*/
 @media (min-width: 768px) and (max-width: 1024px) {
   .col-md-1 {
     width: 100%;
   }
 }
-/*
-  ##Device = Tablets, Ipads (landscape)
-  ##Screen = B/w 768px to 1024px
-*/
-/*
-  ##Device = Low Resolution Tablets, Mobiles (Landscape)
-  ##Screen = B/w 481px to 767px
-*/
-/*
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
-/*
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
 
 /*# sourceMappingURL=grp.css.map */
