--- a/css/hw.css
+++ b/css/hw.css
@@ -698,7 +698,7 @@ code, kbd, pre, samp {
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   body {
-    min-width: 0;
+    min-width: 0 !important;
     background: none;
   }
 
@@ -708,7 +708,7 @@ code, kbd, pre, samp {
 }
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
   body {
-    min-width: 0;
+    min-width: 0 !important;
     background: none;
   }
 
@@ -718,7 +718,7 @@ code, kbd, pre, samp {
 }
 @media (min-width: 481px) and (max-width: 767px) {
   body {
-    min-width: 0;
+    min-width: 0 !important;
     background: none;
   }
 
@@ -728,7 +728,7 @@ code, kbd, pre, samp {
 }
 @media (min-width: 321px) and (max-width: 480px) {
   body {
-    min-width: 0;
+    min-width: 0 !important;
     background: none;
   }
 
@@ -738,7 +738,7 @@ code, kbd, pre, samp {
 }
 @media (min-width: 200px) and (max-width: 320px) {
   body {
-    min-width: 0;
+    min-width: 0 !important;
     background: none;
   }
 
