--- a/scss/outline.scss
+++ b/scss/outline.scss
@@ -7,6 +7,9 @@
 .outline-primary {
   border: $primary 1px solid;
 }
+.outline-default {
+  border: $default 1px solid;
+}
 .outline-info {
   border: $info 1px solid;
 }
