--- a/css/grp.css
+++ b/css/grp.css
@@ -331,6 +331,10 @@ hr {
   border: #1887B9 1px solid;
 }
 
+.outline-default {
+  border: #e7e7e7 1px solid;
+}
+
 .outline-info {
   border: #74b1dd 1px solid;
 }
