--- a/css/hw.css
+++ b/css/hw.css
@@ -396,6 +396,10 @@ code, kbd, pre, samp {
   border: #1887B9 1px solid;
 }
 
+.outline-default {
+  border: #e7e7e7 1px solid;
+}
+
 .outline-info {
   border: #74b1dd 1px solid;
 }
